@@ -1,3 +1,7 @@
+Sep 10, 2007
+
+* FIXED: Search for comments with multiple modes.
+
 Aug 8, 2007
 
 * FIXED: * _\n (Anjo Anjewierden).
